# Tonto

./: .ctags  .vimrc  Makefile.in  Makefile.pl  README  configure  configure.in  macros
trunk/tonto/: .ctags  .cvsignore  .vimrc  Makefile.in  Makefile.pl  README  configure  configure.in  macros
trunk/tonto/.vim/syntax/: foo.vim  fortran.vim
trunk/tonto/basis_sets/: 3-21g  Clementi-Roetti  Coppens  Thakkar  cc-pVTZ  pVDZ-Ahlrichs  pVDZ-Ahlrichs92  vanLenthe-Baerends
trunk/tonto/documentation/: GNU_license.html  index.html  tonto.common.xsl  tonto.css  tonto.docbook  tonto.xml
trunk/tonto/documentation/htmlmanual/: BASIS.html  DFTGRID.html  ELF-plot.html  GAUSSIAN.html  MOL.html  Overview.html  POINTGROUP.html  REFLECTION.html  SHELL.html  TEXTFILE.html  aesthetic-requirements.html  build.html  c-preprocessor.html  calc-chap.html  calculations.html  cite.html  cluster.html  communication.html  compile-fail.html  compile-install.html  compiler-requirements.html  configure.html  constrained-X-ray-calc.html  contents.html  conventional-routines.html  customisability.html  customising.html  defining-types.html  derived-data.html  example-input-files.html  foo-chap.html  foo-to-f95.html  how-foo-works.html  how-to-get.html  index.html  input-data.html  input-rules.html  install-problems.html  install.html  installing-tonto.html  (+31 more)
trunk/tonto/documentation/scripts/: Makefile  Makefile.html  configure.html  configure.in  foo2html.perl  macros  make_deps.perl  make_dist
trunk/tonto/foofiles/: adaptive_quadrature.foo  archive.foo  atom.foo  atom_group.foo  atomvec.foo  basis.foo  basisvec.foo  becke_grid.foo  bin.foo  binmat.foo  binmat3.foo  binvec.foo  buffer.foo  capping_square.foo  cappingsquare.foo  cif.foo  cluster.foo  color_function.foo  colour.foo  colour_function.foo  colourfunction.foo  command_line.foo  coppensbasis.foo  coppensorbital.foo  cpx.foo  cpxmat.foo  cpxmat3.foo  cpxmat4.foo  cpxmat5.foo  cpxvec.foo  crystal.foo  cvecdiis.foo  debug.foo  dft_functional.foo  dftgrid.foo  diffraction_data.foo  diis.foo  file.foo  filevec.foo  fmm_cube.foo  (+242 more)
trunk/tonto/lapack/: blas.f  blas.f90  blas.fpp  lapack.f  lapack.f90  lapack.fpp
trunk/tonto/runfiles/: run_color.foo  run_command_line.foo  run_compare_cifs.foo  run_fingerprint.foo  run_fix_pre_v4088_cif.foo  run_gaussian2.foo  run_gaussian_data.foo  run_metal_fingerprints.foo  run_molecule.foo  run_pi.foo  run_shell4.foo
trunk/tonto/scripts/: Makefile.in  Makefile.pl  compactify_calls.pl  compare_module_file.pl  compare_output.pl  compare_stdout.pl  compile_mod.pl  filepp.pl  foo.perl  foo.pl  foo2html.perl  make_dependencies.perl  make_deps.perl  make_f95_dependencies.pl  make_foo_dependencies.pl  make_navbar  make_navbar.pl  perform_tests.pl  print_cmp.pl  update_module_file
trunk/tonto/site_config/: COMPAQ-OSF1  COMPAQ-f90-on-OSF1  COMPAQ-f95-on-OSF1  DEC-OSF1  DEC-f90-on-OSF1  DEC-f95-on-OSF1  FUJITSU-LINUX  FUJITSU-UXP5  FUJITSU-f90-on-LINUX  FUJITSU-f95-on-LINUX  FUJITSU-frtvpp-on-SUNOS  FUJITSU-frtvpp-on-UXPV  IBM-AIX  IBM-xlf-on-AIX  INTEL-ifc-on-LINUX  LAHEY-lf95-on-LINUX  LAHEY-lf95-on-WINDOWS  LAHEY-lf95-on-Windows_NT  MIPSPRO-f90-on-IRIX64  NAG-f95-on-LINUX  WORKSHOP-f90-on-SUNOS  template
trunk/tonto/tests/: README  nh2cn_g94_structure_factors.in  nh3_crystal.in  nh3_crystal.stdin  nh3_fit.stdin  nh3_fit.stdout  test.nh2cn_g94_sf  test.nh3_fit  test.urea.CE.fragment  test.urea.CE.surface  urea.CE.CIF.cxc  urea.CE.CIF.stdout  urea.CE.fragment.stdout  urea.CE.fragment.urea_urea.cxd  urea.CE.surface.stdin  urea.CE.surface.stdout
trunk/tonto/tests/6-31g*/: stdin
trunk/tonto/tests/6-31g-star/: stdin  stdout
trunk/tonto/tests/Ar_atom_gchf_DKH/: Ar.electron_density_grid,gnuplot  Ar.orbital_1_density_grid,gnuplot  stdin  stdout
trunk/tonto/tests/Ar_atom_gchf_IOTC/: Ar.electron_density_grid,gnuplot  Ar.orbital_1_density_grid,gnuplot  stdin  stdout
trunk/tonto/tests/Ar_atom_rhf_DKH/: Ar.electron_density_grid,gnuplot  Ar.orbital_1_density_grid,gnuplot  stderr  stdin  stdout
trunk/tonto/tests/Ar_atom_rhf_IOTC/: Ar.electron_density_grid,gnuplot  Ar.orbital_1_density_grid,gnuplot  stdin  stdout
trunk/tonto/tests/BH_GSCF_electric_dipole/: stdout
trunk/tonto/tests/B_L_field/: CoCl4.B_L_field.z,gnuplot  IO
trunk/tonto/tests/DZP/: stdin  stdout
trunk/tonto/tests/Fermium99+_DKHx_benchmark/: README  stdin  stdout
trunk/tonto/tests/HCl_PCE_at_nucleus/: HCl.electron_density_grid,gnuplot  reiher++.bas  stdin  stdout
trunk/tonto/tests/HCl_picture_change_effect_at_nucleus/: HCl.electron_density_grid,gnuplot  stdin  stdout
trunk/tonto/tests/Hirshfeld_atom_properties/: stdin  stdout
trunk/tonto/tests/Roby_bond_indices/: stdin  stdout
trunk/tonto/tests/STO-3G/: stdin  stdout
trunk/tonto/tests/XCHF_plus_ELF/: stdin  stdout
trunk/tonto/tests/aug-cc-pVDZ/: stdin  stdout
trunk/tonto/tests/blyp/: stdin  stdout
trunk/tonto/tests/cluster_charge_SCF/: stdin  stdout
trunk/tonto/tests/cn-hcn_dimer_rhf_cc-pVDZ_various_E_decompositions/: IO  stdout
trunk/tonto/tests/cocl4--_gchf_TZP_B_L_field_plot/: CoCl4.B_L_field.x,gnuplot  CoCl4.B_L_field.y,gnuplot  CoCl4.B_S_field.x,gnuplot  CoCl4.B_S_field.z,gnuplot  CoCl4.B_field.y,gnuplot  stdin  stdout
trunk/tonto/tests/consistent_cluster_charge_SCF/: stdin  stdout
trunk/tonto/tests/defragment_from_CIF/: IO  stdout
trunk/tonto/tests/dimer_energy_decomposition/: stdin  stdout
trunk/tonto/tests/dipole_polarisability/: stdin  stdout
trunk/tonto/tests/e_field/: stdout
trunk/tonto/tests/ediis/: stdin  stdout
trunk/tonto/tests/ediis+diis/: stdin  stdout
trunk/tonto/tests/embedded_rhf/: stdin
trunk/tonto/tests/energy_decomposition/: stdin  stdout
trunk/tonto/tests/esp_plot/: stdin  stdout
trunk/tonto/tests/fit_cc_hirshfeld_atoms/: IO  stdin  stdout  stdout.cif
trunk/tonto/tests/fit_hirshfeld_atoms/: IO  stdin  stdout
trunk/tonto/tests/g94_checkpoint_input/: stdin  stdout
trunk/tonto/tests/g94_structure_factor_range/: stdin  stdout  stdout.bad
trunk/tonto/tests/g94_structure_factors/: stdin  stdout
trunk/tonto/tests/h2o_rhf_DZP/: stdin  (+1 more)
(+1032 files in other folders)
