dnl Process this file with autoconf to produce a configure script.
dnl Attempt number 1 by Daniel Grimwood, October 2000.

dnl ****************************************************************************
dnl Define macros first
dnl ****************************************************************************

AC_DEFUN(DAN_CHECK_LIB,
[
if test ${havelibs} != "1"; then
ac_save_LIBS="$LIBS"
AC_MSG_CHECKING("for $1")
LIBS="$1 $LIBS"
cat > conftest.f90 <<EOF
      program main
        write(*,*) lsame("a","b")
      end
EOF
rm -f conftest.x
csh -c "$FC -O0 $LIBS -o conftest.x conftest.f90 >& /dev/null"
LIBS="$ac_save_LIBS"
if eval "test -e conftest.x"; then
  AC_MSG_RESULT(yes)
  havelibs="1"
  LIBS="$1 $LIBS"
  AC_DEFINE(LIBS,LIBS)
else
  AC_MSG_RESULT(no)
fi
rm -f conftest.x conftest.f90
fi
])

AC_DEFUN(DAN_GET_COMPILER,
[
if test ${compiler} = UNKNOWN; then
  ${PERL} -e 'open(A,"conf.test"); while (<A>) {if (/$1/) {exit 0}; exit 1;}'
  if test ${?} = 0; then
    compiler=$2
  fi

fi
])

dnl ****************************************************************************
dnl                   The actual script follows now
dnl ****************************************************************************

define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_INIT(Makefile.in)

dnl Checks for programs.
AC_MSG_RESULT("")
AC_CHECKING(Programs)
AC_CHECK_PROG(PERL,perl,perl,none)
test ${PERL} = none && AC_MSG_ERROR("perl not found")
AC_CHECK_PROG(UNAME,uname,uname,none)
test ${UNAME} = none && AC_MSG_ERROR("uname not found")
AC_CHECK_PROGS(MAKE,make gmake,none)
test ${MAKE} = none && AC_MSG_ERROR("make not found")
AC_MSG_CHECKING("whether GNU make")
${MAKE} -v -f/dev/null > conf.test 2>&1
${PERL} -e 'open(A,"conf.test"); while (<A>) {if (/GNU/) {exit 0}; exit 1;}'
if test ${?} = 1; then
  rm -f conf.test
  AC_MSG_RESULT("no")
  AC_MSG_ERROR("GNU make required")
else
  rm -f conf.test
  AC_MSG_RESULT("yes")
fi

dnl Get OS Type
uname=`${UNAME}`
test ${uname} = Linux && OS=LINUX
test ${uname} = OSF1  && OS=OSF1
test ${uname} = none  && OS=UNKNOWN

AC_MSG_RESULT("")
AC_CHECKING(Fortran compiler)
AC_CHECK_PROGS(FC,frt f95 f90 frt,none)
test ${FC} = none && AC_MSG_ERROR("Fortran compiler not found")
AC_MSG_RESULT("")

dnl Get Fortran Compiler name
${FC} -V > conf.test 2>&1 || ${FC} -v > conf.test 2>&1 || ${FC} -version > conf.test 2>&1
compiler=UNKNOWN
DAN_GET_COMPILER(Fujitsu,FUJITSU)
DAN_GET_COMPILER(Compaq,COMPAQ)
rm -f conf.test a.out
SYSCOMP="${compiler}-${OS}"
AC_MSG_RESULT("Compiler-OS set to... ${SYSCOMP}")

dnl Checks for libraries.
AC_MSG_RESULT("")
AC_CHECKING(Libraries)
havelibs="0"
DAN_CHECK_LIB(-lcxml)
DAN_CHECK_LIB(-ldxml)
DAN_CHECK_LIB(-lblas -llapack)
DAN_CHECK_LIB(-lessl)

set srcdir = " := .:objects:modules:f90:dependencies:documentation/htmlfiles:scripts:foofiles"
dnl ESSL cmat.f90 mat.f90

AC_MSG_RESULT("")
SITECONFIG="${srcdir}/site_config/${SYSCOMP}"
tmp="${SITECONFIG} file required."
test -f ${SITECONFIG} || AC_MSG_ERROR(${tmp})
AC_SUBST_FILE(SITECONFIG)
AC_SUBST(FC)
AC_SUBST(LIBS)
AC_SUBST(PERL)
AC_SUBST(MAKE)
AC_OUTPUT(Makefile)
AC_MSG_RESULT("")
tmp="Next, type \"${MAKE} run_mol.x\""
AC_MSG_RESULT(${tmp})
